// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoTip renders properly with a default MenuItemIcon 1`] = `
<li
  class="dropdown"
>
  <a
    aria-expanded="false"
    class=""
    href="#"
    id="infotip-widget"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-info"
    />
     Messages: 2
  </a>
  <div
    class="dropdown-menu infotip bottom-right"
  >
    <div
      class="arrow"
    />
    <ul
      class="list-group"
    >
      <li
        class="list-group-item"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-info i"
        />
         Added Datasources TestDS
      </li>
      <li
        class="list-group-item"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-info i"
        />
         Modified Datasources ExampleDS
      </li>
    </ul>
    <div
      class="footer"
    >
      <a
        href="#"
      >
        Clear Messages
      </a>
    </div>
  </div>
</li>
`;

exports[`InfoTip renders properly with another MenuItemIcon 1`] = `
<li
  class="dropdown"
>
  <a
    aria-expanded="false"
    class=""
    href="#"
    id="infotip-widget"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-info"
    />
     Messages: 2
  </a>
  <div
    class="dropdown-menu infotip bottom-right"
  >
    <div
      class="arrow"
    />
    <ul
      class="list-group"
    >
      <li
        class="list-group-item"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-cube i"
        />
         Added Datasources TestDS
      </li>
      <li
        class="list-group-item"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-check i"
        />
         Modified Datasources ExampleDS
      </li>
    </ul>
    <div
      class="footer"
    >
      <a
        href="#"
      >
        Clear Messages
      </a>
    </div>
  </div>
</li>
`;

exports[`InfoTip renders properly with item children 1`] = `
<li
  class="dropdown"
>
  <a
    aria-expanded="false"
    class=""
    href="#"
    id="infotip-widget"
  >
    <span
      aria-hidden="true"
      class="pficon pficon-info"
    />
     Messages: 2
  </a>
  <div
    class="dropdown-menu infotip bottom-right"
  >
    <div
      class="arrow"
    />
    <ul
      class="list-group"
    >
      <li
        class="list-group-item"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-info i"
        />
         Added Datasources TestDS
      </li>
      <li
        class="list-group-item"
      >
        <span
          aria-hidden="true"
          class="pficon pficon-info i"
        />
         Modified Datasources ExampleDS
      </li>
    </ul>
    <div
      class="footer"
    >
      <a
        href="#"
      >
        Clear Messages
      </a>
    </div>
  </div>
</li>
`;
